# PortaMailCapstone

./: CLAUDE.md  GEMINI.md  README.md  cmdvel_log.csv  cmdvel_log.py  jitter_test.py  launch_hardware.sh  launch_mapping.sh  launch_portamail.sh  launch_simulation.sh  motor_response.py  patch_teensy.sh  run_agent.sh  setup_and_build.sh  setup_gazebo_classic.sh  spawn_sdf_robot.sh  test_lidar.py
.claude/: settings.local.json
CAD/First Iteration/: 2702T104_Cart-King Caster.SLDPRT  47065T554_T-Slotted Framing.SLDPRT  47065T554_T-Slotted Framing_1.SLDPRT  5537T344_T-Slotted Framing.SLDPRT  Belly.SLDPRT  Caster Base Block.SLDPRT  Caster Wheel.SLDASM  H-Bridge_L298N.SLDPRT  Heatsink+fan RPi-5.SLDPRT  HexSoon 40A PDB.SLDPRT  IMU.SLDPRT  Left Axle Carrier.SLDPRT  Left Bumper.SLDPRT  Lidar Casket.SLDPRT  Lidar.SLDPRT  MOTOR GB37Y3530 _.SLDPRT  Motorized Wheel.SLDPRT  Part17.SLDPRT  Part19.SLDPRT  Part20.SLDPRT  Right Axle Carrier.SLDPRT  Right Bumper.SLDPRT  Screen Casket.SLDPRT  Screen.SLDPRT  Solid10[1].SLDPRT  Solid11[1].SLDPRT  Solid12[1].SLDPRT  Solid13[1].SLDPRT  Solid14[1].SLDPRT  Solid15[1].SLDPRT  Solid16[1].SLDPRT  Solid17[1].SLDPRT  Solid18[1].SLDPRT  Solid19[1].SLDPRT  Solid1[1].SLDPRT  Solid20[1].SLDPRT  Solid21[1].SLDPRT  Solid22[1].SLDPRT  Solid23[1].SLDPRT  Solid24[1].SLDPRT  (+12 more)
LCD_web/: README.md
LCD_web/portamail_ui/: AS_BUILT_CONTRACT.md  CODEX_DESKTOP_GUIDELINES.txt  EXTERNAL_CONTRACT.txt  Makefile  README.md  app.py
LCD_web/portamail_ui/interface/: api_handlers.py  contract.py  event_store.py  validators.py
LCD_web/portamail_ui/logs/: delivery_log.txt
LCD_web/portamail_ui/state/: model.py  state_machine.py
LCD_web/portamail_ui/static/: app.js  styles.css
LCD_web/portamail_ui/templates/: base.html  index.html
LCD_web/portamail_ui/tests/: test_api_contract.py  test_socketio_contract.py  test_state_machine_contract.py  test_support.py  test_ui_debug_toggle.py
LCD_web/portamail_ui/tools/: external_sim.py  (+2 more)
capstone_PCB/: capstone_PCB.kicad_pcb  capstone_PCB.kicad_prl  capstone_PCB.kicad_pro  capstone_PCB.kicad_sch  fp-info-cache
capstone_PCB/PCB/: PCB.kicad_sch
differential_drive/: Makefile  README_DIFF_DRIVE.md  teensy_diff_drive_executor.ino
differential_drive/TEST/: sleep_250ms.txt
differential_drive/source/: main.cpp
downloads/: ESET462_Lab6_Report_Template.docx  ProjectCharter.docx  SoftwareRequirements.docx
downloads/capstone_PCB/: capstone_PCB.kicad_sch  capstone_PCB.kicad_sch-bak  fp-info-cache
external_controller/: README.md  config.json  controller.py
gdrive_downloads/: Deliverables_TechRequirements.docx  PO Digikey Portamail 2-12-2026.xlsx  ProductReqSpec.docx  TestingPlan.docx
gdrive_downloads/capstone_PCB/: capstone_PCB.kicad_pcb  capstone_PCB.kicad_prl  fp-lib-table
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
maps/: portamail_map_20260309_215941.yaml  portamail_map_20260309_220011.pgm  portamail_map_20260309_220011.yaml  portamail_map_20260309_220041.yaml  portamail_map_20260309_220111.yaml  portamail_map_20260309_220141.yaml  portamail_map_20260309_220211.pgm  portamail_map_20260309_220211.yaml  portamail_map_20260309_220241.pgm  portamail_map_20260309_220241.yaml  portamail_map_20260309_220311.pgm  portamail_map_20260309_220311.yaml  portamail_map_20260309_220341.pgm  portamail_map_20260309_220341.yaml  portamail_map_20260309_222307.pgm  portamail_map_20260309_222307.yaml  portamail_map_20260309_222407.pgm  portamail_map_20260309_222407.yaml  portamail_map_20260309_222437.pgm  portamail_map_20260309_222437.yaml  portamail_map_20260309_222507.pgm  portamail_map_20260309_222507.yaml  portamail_map_20260309_222537.pgm  portamail_map_20260309_222537.yaml  portamail_map_20260309_222607.pgm  portamail_map_20260309_222607.yaml  portamail_map_20260312_001828.pgm  portamail_map_20260312_001828.yaml  portamail_map_20260312_001905.pgm  portamail_map_20260312_001905.yaml
scripts/: apply_splash.sh  splashscreen.py
src/: CMakeList.txt  locations.yaml  navigation_coordinator.cpp  package.xml  xbox_bridge.py
src/carmen_player/: package.xml  setup.cfg  setup.py
src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/lcd_bridge/: README.md  package.xml  setup.cfg  setup.py
src/lcd_bridge/lcd_bridge/: node.py
src/lcd_bridge/resource/: lcd_bridge
src/log/: latest_build
src/portamail_coordinator/: CMakeLists.txt  package.xml
src/portamail_coordinator/config/: locations.yaml
src/portamail_coordinator/firmware/teensy_drive/: teensy_drive.ino
src/portamail_coordinator/install/: local_setup.sh
src/portamail_coordinator/install/portamail_navigation/share/portamail_navigation/: package.bash  package.zsh
src/portamail_coordinator/launch/: bringup.launch.py
src/portamail_coordinator/log/: latest_build
src/portamail_coordinator/scripts/: lcd_bridge.py
src/portamail_coordinator/src/: navigation_coordinator.cpp
src/portamail_navigation/: CMakeLists.txt  bringup.launch.py  package.xml
src/portamail_navigation/config/: locations.yaml
src/portamail_navigation/firmware/teensy_driver/: teensy_drive.ino
src/portamail_navigation/install/: setup.sh
src/portamail_navigation/launch/: bringup.launch.py  joystick.launch.py
src/portamail_navigation/src/: mock_driver.cpp  navigation_coordinator.cpp
src/portamail_navigator/: CMakeLists.txt  package.xml
src/portamail_navigator/config/: ekf.yaml  ekf_no_imu.yaml  map_autosave.yaml  slam.yaml  slam_params.yaml
src/portamail_navigator/firmware/esp32_driver/: esp32_driver.ino
src/portamail_navigator/firmware/teensy_driver/: locale_stubs.c  teensy_driver.ino
src/portamail_navigator/launch/: gazebo_mapping.launch.py  gazebo_sdf.launch.py  hardware.launch.py  joystick.launch.py  mapping.launch.py
src/portamail_navigator/meshes/: caster_wheel.STL  right_wheel.STL
src/portamail_navigator/models/: portamail_model.sdf
src/portamail_navigator/src/: map_autosave_node.cpp  mock_driver.cpp  static_tf_broadcaster.cpp
src/portamail_navigator/urdf/: portamail.urdf
src/portamail_navigator/worlds/: office.world  office_world.world
(+163 files in other folders)
