<?xml version="1.0"?>
<package format="3">
  <name>lcd_bridge</name>
  <version>0.0.1</version>
  <description>ROS2 bridge skeleton for PortaMail LCD Flask server.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
